--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 ---
-<div class="post">
+<!-- <div class="post">
 
   <header class="post-header">
     <h1>{{ page.title }}</h1>
@@ -12,4 +12,30 @@ layout: default
   {{ content }}
   </article>
 
-</div>
+</div> -->
+
+<div class="posts-wrapper">
+
+    
+         <div class="post">
+        
+         <div class="post-info">
+          
+         <!-- KRAJ .post-info .-->
+         </div>
+
+         <div class="post-content">
+          
+          <h3>{{ page.title }}</h3>
+          <p>{{content}}</p>
+
+         <!-- KRAJ .post-content-->
+         </div>
+
+      <!-- KRAJ .post -->
+      </div>
+
+
+
+  <!-- KRAJ .posts-wrapper -->
+  </div>
