--- a/css/style.css
+++ b/css/style.css
@@ -1,26 +1,3 @@
-/*html { 
-  background: url(../images/background.png) no-repeat center top fixed; 
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-}
-
-body
-{
-	height: 1200px;
-}
-*/
-/*.header
-{
-	width:100%;
-    height:400px;
-}
-
-
-*/
-
-
 html, body
 {
     padding: 0;
@@ -29,6 +6,11 @@ html, body
 html
 {
     height: 100%;
+}
+
+a, a:active, a:hover, a:visited
+{
+    text-decoration: none !important;
 }
  
 body {
