--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,41 +1,44 @@
 ---
 layout: default
 ---
-<!-- <div class="post">
 
-  <header class="post-header">
-    <h1>{{ page.title }}</h1>
-    <p class="meta">{{ page.date | date: "%b %-d, %Y" }}{% if page.author %} • {{ page.author }}{% endif %}{% if page.meta %} • {{ page.meta }}{% endif %}</p>
-  </header>
-
-  <article class="post-content">
-  {{ content }}
-  </article>
-
-</div> -->
-
-<div class="posts-wrapper">
-
-    
-         <div class="post">
-        
-         <div class="post-info">
-          
-         <!-- KRAJ .post-info .-->
-         </div>
-
-         <div class="post-content">
-          
-          <h3>{{ page.title }}</h3>
+<div class="container-fluid posts-wrapper">
+ 
+  <div class="row post">
+   
+    <div class="col-md-12 post-content">
+      
+          <h3>{{ post.title }}</h3>
           <p>{{content}}</p>
+    </div>
 
-         <!-- KRAJ .post-content-->
-         </div>
-
-      <!-- KRAJ .post -->
-      </div>
-
-
-
-  <!-- KRAJ .posts-wrapper -->
+  
   </div>
+
+  <div class="row">
+    
+    <div class="col-md-12">
+      
+    <div id="disqus_thread"></div>
+    <script type="text/javascript">
+        /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
+        var disqus_shortname = 'tnedich'; // required: replace example with your forum shortname
+
+        /* * * DON'T EDIT BELOW THIS LINE * * */
+        (function() {
+            var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+            dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
+            (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+        })();
+    </script>
+    <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+    <a href="http://disqus.com" class="dsq-brlink">comments powered by <span class="logo-disqus">Disqus</span></a>
+    
+
+    </div>
+
+  </div>
+
+
+</div>
+
