--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,5 +9,6 @@
 	<link rel="stylesheet" href="/scripts/mmenu/src/css/addons/jquery.mmenu.dragopen.css">
 	<link rel="stylesheet" href="/css/animate.css">
 	<link href='http://fonts.googleapis.com/css?family=Roboto:400,100,300' rel='stylesheet' type='text/css'>
+	<link rel="stylesheet" href="/css/bootstrap-3.2.0-dist/css/bootstrap.min.css">
 
 </head>
