--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,9 +6,9 @@ layout: default
  
   <div class="row post">
    
-    <div class="col-md-12 post-content">
+    <div class="col-md-12 post-content single-post">
       
-          <h3>{{ post.title }}</h3>
+          <h3>{{page.title}}</h3>
           <p>{{content}}</p>
     </div>
 
@@ -17,7 +17,7 @@ layout: default
 
   <div class="row">
     
-    <div class="col-md-12">
+    <div class="col-md-12 comments-wrapper">
       
     <div id="disqus_thread"></div>
     <script type="text/javascript">
