--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,68 +3,77 @@
 
   {% include head.html %}
 
-    <body>
+<body>
 
+
+<div class="container-fluid">
   
-    <div class="wrapper">
+  <div class="row">
 
-  <div class="header">
-
-     <a href="#menu" class="contacts"></a>
-    <!-- KRAJ .header -->
-  </div>
-
-  <div class="head-wrapper">
-     <div class="centerpiece">
-     <!-- KRAJ .centerpiece -->
-     </div>
-
-     <div class="logotip">
+    <div class="col-md-12 header">
       
+     <a href="#menu" class="contacts"></a>
 
-       <img src="/images/logotip.png" alt="">
+    <!-- KRAJ .col-md-12 .header -->
 
-     <!-- KRAJ .logotip -->
-     </div>
+        
+    </div>
 
-     <div class="blog-wrapper">
-
-     <!-- KRAJ .blog-wrapper -->
-     </div>
-
+    <!-- KRAJ .row -->
   </div>
 
+
+  <div class="row">
+
+  <div class="col-md-3"></div>
+  <div class="col-md-6 centerpiece">
+    <img src="/images/centerpiece.png" alt="" class="img-responsive">
+  </div>
+  <div class="col-md-3">
+    
+      <div class="row">
+
+        <div class="col-md-6 logotip">
+          <img src="/images/logotip.png"  class="pull-left" alt="">
+        </div>
+
+        <div class="col-md-6 blog-bg">
+          <img src="/images/blog_bg.png" class="pull-right" alt="">
+        </div>
+
+       <!-- KRAJ .col-md-6 logotip -->
+      </div>
+
   
-   {{ content }} <!--OVDJE KRENE SADRZAJ IZ FAJLOVA KOJI ZELE KORISTITI DEFAULT LAYOUT -->
+  <!-- KRAJ .col-md-3 -->
+  </div>
 
 
-<!-- KRAJ .wrapper -->
+    <!-- KRAJ .row -->
+  </div>
+
+
+ <!-- nalazi se content u index.html fajlu -->
+ {{content}}
+
+
+  <!-- KRAJ .container-fluid -->
 </div>
+
+
 
 
   <nav id="menu">
    <div>
       
       <ul class="mm-nolist">
-         <li><a href="/">Homepage</a></li>
-         <li><a href="#">About me</a></li>
-         
+         <li><a href="/#">About me</a></li>
+         <li><a href="/#">My CV</a></li>
+         <li><a href="/about/address/">My Work</a></li>
       </ul>
    </div>
 </nav>
 
-
-
-
-
-
-   
-
-
-    {% include footer.html %}
-
-
-  
-
-    </body>
+  {% include footer.html %}
+</body>
 </html>
