--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,43 +2,47 @@
 layout: default
 ---
 
-<div class="container-fluid posts-wrapper">
- 
-  <div class="row post">
-   
-    <div class="col-md-12 post-content single-post">
+<div class="posts-wrapper">
+     
+      <div class="row post">
+       
+        <div class="col-md-12 post-content single-post">
+          
+              <h3>{{page.title}}</h3>
+              <p>{{content}}</p>
+        </div>
+
       
-          <h3>{{page.title}}</h3>
-          <p>{{content}}</p>
-    </div>
-
-  
-  </div>
-
-  <div class="row">
-    
-    <div class="col-md-12 comments-wrapper">
-      
-    <div id="disqus_thread"></div>
-    <script type="text/javascript">
-        /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
-        var disqus_shortname = 'tnedich'; // required: replace example with your forum shortname
-
-        /* * * DON'T EDIT BELOW THIS LINE * * */
-        (function() {
-            var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
-            dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
-            (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
-        })();
-    </script>
-    <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
-    <a href="http://disqus.com" class="dsq-brlink">comments powered by <span class="logo-disqus">Disqus</span></a>
-    
-
-    </div>
-
-  </div>
+      <!-- KRAJ .row .post -->
+      </div>
 
 
-</div>
+
+      <div class="row">
+        
+        <div class="col-md-12 comments-wrapper">
+          
+        <div id="disqus_thread"></div>
+        <script type="text/javascript">
+            /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
+            var disqus_shortname = 'tnedich'; // required: replace example with your forum shortname
+
+            /* * * DON'T EDIT BELOW THIS LINE * * */
+            (function() {
+                var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+                dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
+                (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+            })();
+        </script>
+        <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+        <a href="http://disqus.com" class="dsq-brlink">comments powered by <span class="logo-disqus">Disqus</span></a>
+       
+       </div>
+
+     <!-- KRAJ .row -->
+      </div>
+
+
+<!-- KRAJ .posts-wrapper-->
+</div> 
 
