Little css changes

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -62,17 +62,61 @@
 
 
 
+<!-- ODAVDJE -->
 
-  <nav id="menu">
-   <div>
+<div class="row fotter">
+
+   <div class="col-md-3"></div>
+   <div class="col-md-3"></div>
+   <div class="col-md-3"></div>
+   <div class="col-md-3 hosting"><img src="images/github_logo.png" class="pull-right" alt=""><p class="pull-right hosted-on" >hosted on</p></div>
+
+<!-- KRAJ .row .fotter -->
+</div>
+
+
+  <!-- KRAJ .container-fluid -->
+</div>
+
+
+
+<nav id="menu">
+    <ul >
+      <li>
+        <span>About me</span>
+      </li>
       
-      <ul class="mm-nolist">
-         <li><a href="/#">About me</a></li>
-         <li><a href="/#">My CV</a></li>
-         <li><a href="/about/address/">My Work</a></li>
-      </ul>
-   </div>
-</nav>
+      <li>
+        <span>My work</span>
+         <ul >
+           <li><span>Mechanical engineering</span></li>
+           <li><span>Application development</span></li>
+         </ul>
+      </li>
+
+      <li>
+       <span>Find me on</span>
+       <ul>
+           <li><span>Facebook</span></li>
+           <li><span>Twitter</span></li>
+           <li><span>GitHub</span></li>
+           <li><span>LinkedIn</span></li>
+         </ul>
+      </li>
+
+      <li>
+       <span>My CV</span>
+       <ul>
+           <li><span>Mechanical engineering</span></li>
+           <li><span>Application development</span></li>
+          
+         </ul>
+      </li>
+      
+    </ul>
+    </nav>
+
+
 
   {% include footer.html %}
 </body>
