--- a/css/style.css
+++ b/css/style.css
@@ -1,26 +1,3 @@
-/*html { 
-  background: url(../images/background.png) no-repeat center top fixed; 
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-}
-
-body
-{
-	height: 1200px;
-}
-*/
-/*.header
-{
-	width:100%;
-    height:400px;
-}
-
-
-*/
-
-
 html, body
 {
     padding: 0;
@@ -46,8 +23,8 @@ body {
     min-height: 100%;
     position: relative;
     -webkit-text-size-adjust: none;
+    height: auto;
 
-    height: 1200px;
 }
 body *
 {
@@ -73,7 +50,7 @@ p
 }
 a, a:link, a:active, a:visited, a:hover
 {
-    color: #333 !important;
+    color: #6B5555!important;
     text-decoration: none !important;
     font-family: 'Roboto', sans-serif !important;
     font-weight: 300 !important;
@@ -142,7 +119,7 @@ nav:not(.mm-menu)
 .header,
 .footer
 {
-    background:#E0C3D7;
+    background:#91507C;
     font-size: 16px;
     font-weight: bold;
     color: #fff;
@@ -281,6 +258,7 @@ body.no-labels .mm-menu .mm-collapsed,
 .post
 {
     background-color: #fff;
+    padding: 5px;
 }
 
 
@@ -318,7 +296,8 @@ body.no-labels .mm-menu .mm-collapsed,
 
 .posts
 {
-    margin-top: 20px;
+    margin-top: 5%;
+    background-color: #fff;
 }
 
 .comments-wrapper
@@ -329,4 +308,42 @@ body.no-labels .mm-menu .mm-collapsed,
 .single-post h3
 {
 	text-align: center;
+}
+
+.fotter
+{
+    background:#91507C !important;
+    height: 60px !important; 
+}
+
+.hosting
+{
+    margin-top: 15px;
+}
+
+.hosted-on
+{
+    color:#fff;
+    margin-top:7px;
+}
+
+.mm-header
+{
+    height: 50px !important;
+}
+
+.mm-title
+{
+    padding-top: 15px !important;
+}
+
+.mm-prev
+{
+    padding-top: 15px!important;
+}
+
+.menu-list li
+{
+    height: 50px !important;
+   
 }
