--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -65,7 +65,7 @@
    <div class="col-md-3"></div>
    <div class="col-md-3"></div>
    <div class="col-md-3"></div>
-   <div class="col-md-3 hosting"><img src="images/github_logo.png" class="pull-right" alt=""><p class="pull-right hosted-on" >hosted on</p></div>
+   <div class="col-md-3 hosting"><img src="/images/github_logo.png" class="pull-right" alt=""><p class="pull-right hosted-on" >hosted on</p></div>
 
 <!-- KRAJ .row .fotter -->
 </div>
