--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -79,6 +79,10 @@
 <nav id="menu">
     <ul >
       <li>
+      <span><a href="/">Home</a></span>
+      </li>
+      
+      <li>
         <span>About me</span>
       </li>
       
