Added About page

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -78,8 +78,9 @@
 
 <nav id="menu">
     <ul >
+      <li><a href="/">Home</a></li>
       <li>
-        <span>About me</span>
+        <span><a href="/about">About me</a></span>
       </li>
       
       <li>
