--- a/_includes/about-piece.html
+++ b/_includes/about-piece.html
@@ -2,7 +2,7 @@
 
   <div class="col-md-3"></div>
   <div class="col-md-6 centerpiece">
-    <img src="/images/about-me.png" alt="" class="img-responsive center-block">
+    <img src="/images/about_me.png" alt="" class="img-responsive center-block">
   </div>
   <div class="col-md-3">
     
