--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -67,9 +67,9 @@
        <span>Find me on</span>
        <ul>
            <li><span>Facebook</span></li>
-           <li><span>Twitter</span></li>
-           <li><span>GitHub</span></li>
-           <li><span>LinkedIn</span></li>
+           <li><span><a href="https://twitter.com/Tnedich" target="_blank">Twitter</a></span></li>
+           <li><span><a href="https://github.com/tnedich" taget="_blank">GitHub</a></span></li>
+           <li><span><a href="http://ba.linkedin.com/pub/davor-nedic/27/a22/241" target="_blank">LinkedIn</a></span></li>
          </ul>
       </li>
 
