--- a/css/style.css
+++ b/css/style.css
@@ -26,6 +26,7 @@ body {
     height: auto;
 
 }
+
 body *
 {
     text-shadow: none;
@@ -261,6 +262,7 @@ body.no-labels .mm-menu .mm-collapsed,
 {
     background-color: #fff;
     padding: 5px;
+    margin-top: 40px;
 }
 
 
