--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -74,12 +74,7 @@
       </li>
 
       <li>
-       <span>My CV</span>
-       <ul>
-           <li><span>Mechanical engineering</span></li>
-           <li><span>Application development</span></li>
-          
-         </ul>
+       <span><a href="/cv">My CV</a></span>
       </li>
       
     </ul>
