--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,7 +4,7 @@ layout: default
 
 {% include centerpiece.html %}
 
-<div class="posts-wrapper">
+<div class="row posts-wrapper">
      
       <div class="row post">
        
