--- a/css/style.css
+++ b/css/style.css
@@ -389,6 +389,7 @@ body.no-labels .mm-menu .mm-collapsed,
     margin-top: 40px;
     padding-left: 200px !important;
     padding-right: 200px !important;
+    margin-bottom:40px;
 }
 
 .text p
