--- a/css/style.css
+++ b/css/style.css
@@ -311,6 +311,16 @@ body.no-labels .mm-menu .mm-collapsed,
 	background-color:#fff;
 }
 
+.post-content a, a:visited , a:hover, a:active
+{
+
+    color:#aca5aa !important;
+    font-weight: 300 !important;
+    font-size: 32px !important;
+
+}
+
+
 .comments-wrapper
 {
 	background-color: #fff;
