--- a/cv/css/custom.css
+++ b/cv/css/custom.css
@@ -94,12 +94,12 @@ a:hover {
 	padding: 0 20px;
 	cursor: pointer;
 	background: #91507C;
-	border-bottom: 1px solid #dd1338;
+	border-bottom: 1px solid #91507C;
 }
 
 .menu-toc li a:hover,
 .menu-toc li.menu-toc-current a{
-	background: #dd1338;
+	background: #9B5986;
 }
 
 .menu-panel div {
