--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -36,7 +36,7 @@
    <div class="col-md-3"></div>
    <div class="col-md-3"></div>
    <div class="col-md-3"></div>
-   <div class="col-md-3 hosting"><img src="/images/github_logo.png" class="pull-right" alt=""><p class="pull-right hosted-on" >hosted on</p></div>
+   <div class="col-md-3 hosting"><a href="https://github.com/"><img src="/images/github_logo.png" class="pull-right" alt=""></a><p class="pull-right hosted-on" >hosted by</p></div>
 
 <!-- KRAJ .row .fotter -->
 </div>
