--- a/_includes/centerpiece.html
+++ b/_includes/centerpiece.html
@@ -14,6 +14,7 @@
 
         <div class="col-md-6 blog-bg">
           <img src="/images/blog_bg.png" class="pull-right" alt="">
+          <p>{{page.posts.size}}</p>
         </div>
 
        <!-- KRAJ .col-md-6 logotip -->
