--- a/_includes/centerpiece.html
+++ b/_includes/centerpiece.html
@@ -14,7 +14,7 @@
 
         <div class="col-md-6 blog-bg">
           <img src="/images/blog_bg.png" class="pull-right" alt="">
-          <p class="pull-right" style="margin-top:5px;color:#fff;">{{site.posts.size}}</p>
+          <p class="pull-right" style="color:#fff;position:absolute;top:5;right:0;">{{site.posts.size}}</p>
         </div>
 
        <!-- KRAJ .col-md-6 logotip -->
