--- a/cv/css/custom.css
+++ b/cv/css/custom.css
@@ -16,7 +16,7 @@ body {
 	font-family: 'Lato', Calibri, Arial, sans-serif;
 	background: #fff;
 	font-weight: 400;
-	font-size: 100%;
+/*	font-size: 100%;*/
 	color: #333;
 	height: 100%;
 }
@@ -272,4 +272,9 @@ a:hover {
 	.content {
 		font-size: 75%;
 	}
+}
+
+h3
+{
+	color:#91507C !important;
 }
